--- a/prog03.html
+++ b/prog03.html
@@ -1,82 +1,80 @@
-<html lang='en'>
+
+<html lang="en">
+
 <head>
-    <title>Prog03 - Kaden Thompson</title>
-    <meta charset='UTF-8'>
-    <link rel="stylesheet" type="text/css" href="prog03.css">
+  <title>Prog3 - CIS255</title>
+  <link rel="stylesheet" type="text/css" href="https://jdog4031.github.io/Pages/Proj3.css">
 </head>
+
 <body>
-<form oninput="team1Total.value=parseInt(t1q1.value)+parseInt(t1q2.value)+parseInt(t1q3.value)+parseInt(t1q4.value)
-		team2Total.value=parseInt(t2q1.value)+parseInt(t2q2.value)+parseInt(t2q3.value)+parseInt(t2q4.value)">
+  <form id="prog03" oninput="p1.value=parseInt(a.value)+parseInt(b.value)+parseInt(c.value)+
+												 parseInt(d.value)+parseInt(e.value)+parseInt(f.value)+parseInt(g.value)+parseInt(h.value)+parseInt(i.value);
+								   p2.value=parseInt(r.value)+parseInt(s.value)+parseInt(t.value)+parseInt(u.value)+parseInt(v.value)+parseInt(w.value)+parseInt(x.value)+
+												 parseInt(y.value)+parseInt(z.value);">
+
     <fieldset>
-        <legend>Basketball Scoring by quarter</legend>
-        <table id = "table">
-            <tr>
-                <td>
-                </td>
-                <td>
-                    <h1 class = "team1">Team 1</h1>
-                </td>
-                <td>
-                    <h1 class = "team2">Team 2</h1>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Quarter 1</p>
-                </td>
-                <td>
-                    <input type="number" name="team1score" id="t1q1" value="0">
-                </td>
-                <td>
-                    <input type="number" name="team2score" id="t2q1" value="0">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Quarter 2</p>
-                </td>
-                <td>
-                    <input type="number" name="team1score" id="t1q2" value="0">
-                </td>
-                <td>
-                    <input type="number" name="team2score" id="t2q2" value="0">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Quarter 3</p>
-                </td>
-                <td>
-                    <input type="number" name="team1score" id="t1q3" value="0">
-                </td>
-                <td>
-                    <input type="number" name="team2score" id="t2q3" value="0">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Quarter 4</p>
-                </td>
-                <td>
-                    <input type="number" name="team1score" id="t1q4" value="0">
-                </td>
-                <td>
-                    <input type="number" name="team2score" id="t2q4" value="0">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>Totals:</p>
-                </td>
-                <td class= "Total1">
-                    <output name="team1Total" for="t1q1 t1q2 t1q3 t1q4"></output>
-                </td>
-                <td class= "Total2">
-                    <output name="team2Total" for="t2q1 t2q2 t2q3 t2q4"></output>
-                </td>
-            </tr>
-        </table>
+      <legend>Golf scores:</legend>
+
+      <table>
+        <tr>
+          <td id="title">Team</td>
+          <td id="title">1</td>
+          <td id="title">2</td>
+          <td id="title">3</td>
+          <td id="title">4</td>
+          <td id="title">5</td>
+          <td id="title">6</td>
+          <td id="title">7</td>
+          <td id="title">8</td>
+          <td id="title">9</td>
+          <td id="title">Total</td>
+
+        </tr>
+        <tr>
+          <td id="par">Par</td>
+          <td id="par">5</td>
+          <td id="par">2</td>
+          <td id="par">3</td>
+          <td id="par">2</td>
+          <td id="par">2</td>
+          <td id="par">4</td>
+          <td id="par">3</td>
+          <td id="par">5</td>
+          <td id="par">4</td>
+          <td id="par">30</td>
+        </tr>
+        <tr>
+          <td id="player1" class="player">Player1</td>
+          <td><input type="number" id="a" value="0"></td>
+          <td><input type="number" id="b" value="0"></td>
+          <td><input type="number" id="c" value="0"></td>
+          <td><input type="number" id="d" value="0"></td>
+          <td><input type="number" id="e" value="0"></td>
+          <td><input type="number" id="f" value="0"></td>
+          <td><input type="number" id="g" value="0"></td>
+          <td><input type="number" id="h" value="0"></td>
+          <td><input type="number" id="i" value="0"></td>
+          <td><output id="player1" form="prog03" name="p1" for="a i"></output></td>
+        </tr>
+        <tr>
+          <td id="player2" class="player">Player2</td>
+          <td><input type="number" id="r" value="0"></td>
+          <td><input type="number" id="s" value="0"></td>
+          <td><input type="number" id="t" value="0"></td>
+          <td><input type="number" id="u" value="0"></td>
+          <td><input type="number" id="v" value="0"></td>
+          <td><input type="number" id="w" value="0"></td>
+          <td><input type="number" id="x" value="0"></td>
+          <td><input type="number" id="y" value="0"></td>
+          <td><input type="number" id="z" value="0"></td>
+          <td><output id="player2" form="prog03" name="p2" for="r z"></output></td>
+        </tr>
+      </table>
+
+      <p> <b>Enter the score for this 9 hole game of golf.</b> </p>
+
     </fieldset>
-</form>
+  </form>
 </body>
+
 </html>
